# Tracer

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json alias
FreeImage/Source/LibJXR/image/decode/: #strInvTransform.c#  .#strInvTransform.c
cmake/: FindSDL2.cmake
src/: camera.cpp  camera.hpp  common.cpp  common.hpp  geometry.cpp  geometry.hpp  light.cpp  light.h  main.cpp  raytracer.cpp  raytracer.hpp  readfile.cpp  readfile.hpp  transform.cpp  transform.hpp
tests/: big-scene4.test  scene5.test
